Fixed autocomplete with scrollbar
IE[876] have problems when the ul has a scrollbar
and the user clicks there. The activate event
is thrown and the list disappears.

This patch tries to solve this.

Also passed jslint and google closure to check for
those typical mistakes.

I'm sorry for the conversion from spaces to tabs
:/

--- a/autocomplete.css
+++ b/autocomplete.css
@@ -11,6 +11,12 @@ label {display:block}
 /* Big bird example */
 ul.mybigbirdlist { display: table-cell }
 
+/* Scroll bar demo */
+ul.scrollbardemo { 
+	max-height: 100px; 
+	overflow-y:auto;
+}
+
 /* Prettify changes */
 pre.prettyprint {
 	background-color: #D8D8D8
